--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -73,7 +73,9 @@
   -->
     <div class="row t30 b20 homepage">
       <div class="small-12 columns" style=" z-index:-1; ">
-        <ul id="slides"> {% for post in site.posts limit:15 %} {% if post.classification == 'news' and post.img %}
+        <ul id="slides"> 
+{% assign maxRelated = 3 %}{% assign maxRelatedCounter = 0 %}
+          {% for post in site.posts limit:15 %} {% if post.classification == 'news' and post.img %}
         <li class="slide">
           <div style="background: url('{{post.img}}'); width:100%; height:30rem;-moz-background-size: 100% 30rem;
   -webkit-background-size: 100% 30rem;
@@ -81,6 +83,10 @@
   background-size: 100% 30rem;" href="{{ post.url }}"></div>
           <p class="text-right caption"> <a href="{{ post.url }}">{{ post.title }}</a></p>
         </li>
+        {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %}
+      {% if maxRelatedCounter >= maxRelated %}
+        {% break %}
+      {% endif %}
         {% endif %}{% endfor %}
         </ul>
         </div>
@@ -105,8 +111,13 @@
       <div class="medium-6 columns">
         <h2 class="font-size-h3 t10" style="padding-bottom: 20px;">最新发布</h2>
           <ul class="side-nav">
-            {% for post in site.posts limit:15 %} {% if post.classification == 'news'  %}
+            {% assign maxRelated = 5 %}{% assign maxRelatedCounter = 0 %}
+            {% for post in site.posts %} {% if post.classification == 'news'  %}
             <li><a href="{{post.url}}"><strong>{{post.date | date: '%Y-%m-%d'}} ››</strong>{{post.title}}</a>
+            {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %}
+      {% if maxRelatedCounter >= maxRelated %}
+        {% break %}
+      {% endif %}
             {% endif %}{% endfor %}
                   <li class="text-right"><a href="news/index.html"><strong>更多 ›</strong></a></ul>
       </div>
