--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 9]><html class="no-js ie9" lang="en-US" prefix="og: http://ogp.me/ns#"><![endif]-->
 <!--[if gt IE 9]><!-->
 <html class="no-js" lang="en-US" prefix="og: http://ogp.me/ns#">
-<!--<![endif]-->
+<!--[endif]-->
 
 <head>
   {% include head.html %}
