--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -42,9 +42,9 @@
               <!-- <img src="{{site.url}}/assets/img/photorederx_bg-desktop.jpg"  alt=""/> -->
               </div>
             </a>
-        <h2 class="font-size-h3 t10">虚拟仿真实验室</h2>
+        <h2 class="font-size-h3 t10">环境虚拟仿真实验平台</h2>
         <p>环境虚拟仿真实验室室一个基于环境大数据的虚拟仿真平台，平台利用Arcgis、系统分析、机器学习和云技术等进行数据分析和展示，主要包括“社会经济环境国家级虚拟仿真实验教学中心”和“污染控制与资源化研究国家重点实验室”。
-          <p><a class="btn tiny radius" href="https://ctfysh.shinyapps.io/virtuallab/">访问 ›</a></div>
+          <p><a class="btn tiny radius" href="{{site.url}}/envirlab/">访问 ›</a></div>
       {% assign maxRelated = 1 %}{% assign maxRelatedCounter = 0 %}
       {% for post in site.posts %} {% if post.classification == 'publications' %}
 
