--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -77,7 +77,7 @@
           <div style="background: url('{{post.img}}'); width:100%; height:30rem;-moz-background-size: 100% 30rem;
   -webkit-background-size: 100% 30rem;
   -o-background-size: 100% 30rem;
-  background-size: 100% 30rem;" href="{{site.url}}{{ post.url }}"></div>
+  background-size: 100% 30rem; href="{{site.url}}{{ post.url }}"></div>
           <p class="text-right caption"> <a href="{{site.url}}{{ post.url }}">{{ post.title }}</a></p>
         </li>
  {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %}
