--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,4 +1,4 @@
-<html class="no-js" lang="en-US" prefix="og: http://ogp.me/ns#">
+<!-- <html class="no-js" lang="en-US" prefix="og: http://ogp.me/ns#"> -->
 
 
 <head>
