change xnfzsys index

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -34,7 +34,7 @@
 
       <div class="medium-4 columns frontpage-widget">
         <a href="#">
-            <div class="img" style="height: 0; padding-bottom: 50%; width: 100%; background: url('/assets/img/xnfzsys-desktop.jpg'); background-size: 100% 100%;">
+            <div class="img" style="height: 0; padding-bottom: 50%; width: 100%; background: url('http://player.youku.com/player.php/sid/XMzgyMTQxMjM4NA==/v.swf'); background-size: 100% 100%;">
               <!-- <img src="{{site.url}}/assets/img/photorederx_bg-desktop.jpg"  alt=""/> -->
               </div>
             </a>
