--- a/_layouts/platform.html
+++ b/_layouts/platform.html
@@ -14,7 +14,7 @@
     <section class="research-intro" style="background-image: url('{{site.url}}/assets/img/platform.jpg');">
     <div class="wrapper wrapper--research wrapper--intro">
       <header class="research-intro__header transparent js-animate-fadeInOnScroll">
-                  <h1 class="research-intro__heading">区域物质循环虚拟仿真实验</h1>
+                  <h1 class="research-intro__heading">物质循环过程虚拟仿真实验</h1>
           <div class="divider divider--violet"><span></span></div>
                 <p>开课时间：2018-09-17&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;学分：2&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;学时：36&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;负责人：袁增伟</p>
       </header>
@@ -58,8 +58,8 @@
 
                 <div class="research-photoredox__slide--img">
                   <div class="research-photoredox__slide-image" style="padding: 25px 0;">
-                    <embed src="http://p71vl47v1.bkt.clouddn.com/%E5%8D%97%E4%BA%AC%E5%A4%A7%E5%AD%A6-%E7%89%A9%E8%B4%A8%E5%BE%AA%E7%8E%AF%E8%BF%87%E7%A8%8B%E8%99%9A%E6%8B%9F%E4%BB%BF%E7%9C%9F%E5%AE%9E%E9%AA%8C%E4%BB%8B%E7%BB%8D%E8%A7%86%E9%A2%91.mp4" allowFullScreen="true" quality="high" width="650" height="400" align="middle"></embed>
-                    <!-- <iframe frameborder="0" src="https://ufo0-my.sharepoint.com/personal/pan_bubais_top/Documents/Envirlab/%E5%8D%97%E4%BA%AC%E5%A4%A7%E5%AD%A6-%E7%89%A9%E8%B4%A8%E5%BE%AA%E7%8E%AF%E8%BF%87%E7%A8%8B%E8%99%9A%E6%8B%9F%E4%BB%BF%E7%9C%9F%E5%AE%9E%E9%AA%8C%E4%BB%8B%E7%BB%8D%E8%A7%86%E9%A2%91.mp4" allowFullScreen="true"></iframe> -->
+                    <embed src="https://imgcache.qq.com/tencentvideo_v1/playerv3/TPout.swf?max_age=86400&v=20161117&vid=b0700dfyzz1&auto=0" allowFullScreen="true" quality="high" width="650" height="400" align="middle"></embed>
+                    <!-- <iframe frameborder="0" src="http://p71vl47v1.bkt.clouddn.com/%E5%8D%97%E4%BA%AC%E5%A4%A7%E5%AD%A6-%E7%89%A9%E8%B4%A8%E5%BE%AA%E7%8E%AF%E8%BF%87%E7%A8%8B%E8%99%9A%E6%8B%9F%E4%BB%BF%E7%9C%9F%E5%AE%9E%E9%AA%8C%E4%BB%8B%E7%BB%8D%E8%A7%86%E9%A2%91.mp4" allowFullScreen="true" width="650" height="400"></iframe> -->
                   </div>
                 </div>
                           </div>
@@ -73,7 +73,7 @@
                 <div class="research-photoredox__slide--desc">
 
                   <h3 class="research-photoredox__slide-title">实验来源</h3>
-                  <p class="research-photoredox__slide-content">区域物质循环动态虚拟仿真系统”，该实验教学项目的素材来源于2016年本团队发表在美国科学院院刊（Proceedings of the National Academy of Sciences of the United States of America，简称为PNAS，影响因子9.504）上的一篇题为“Intensification of phosphorus cycling in China since the 1600s”（中国17世纪以来磷循环不断被强化）的论文，该论文首次实现了长时序多阶段磷循环精细刻画，其方法已被广泛应用于指导国内外环境科学与工程专业物质循环方向的本科生和研究生教学与科研，得到了广泛认可。</p>
+                  <p class="research-photoredox__slide-content">物质循环过程虚拟仿真实验，该实验教学项目的素材来源于2016年本团队发表在美国科学院院刊（Proceedings of the National Academy of Sciences of the United States of America，简称为PNAS，影响因子9.504）上的一篇题为“Intensification of phosphorus cycling in China since the 1600s”（中国17世纪以来磷循环不断被强化）的论文，该论文首次实现了长时序多阶段磷循环精细刻画，其方法已被广泛应用于指导国内外环境科学与工程专业物质循环方向的本科生和研究生教学与科研，得到了广泛认可。</p>
 
                                   </div>
             </div>
