--- a/_layouts/platform.html
+++ b/_layouts/platform.html
@@ -26,7 +26,7 @@
             <polygon fill="#464646" points="-0.1,39.1 -0.1,26.1 -0.1,13.2 128.3,13.2 128.3,26.1 128.3,39.1 "/>
           </svg>
           <a class="btn  transparent js-animate-fadeInOnScroll" style="margin: 0 2rem;"
-              href="{{site.url}}/envirlab/"
+              href="{{site.url}}/envirlab/login"
                             title="Start">
             <span>开始实验</span>
           </a>
