platform links change

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -447,7 +447,7 @@ c-14 14 -30 25 -34 24 -4 -1 -24 -3 -43 -5z m45 -44 c4 -5 -1 -19 -11 -30 -16
     	<li class="main-nav__item  main-nav__item--691"><a href="{{site.url}}/index.html" class="main-nav__link">首页</a></li>
       <li class="main-nav__item  main-nav__item--691"><a href="{{site.url}}/news/index.html" class="main-nav__link">最近动态</a></li>
       <li class="main-nav__item  main-nav__item--687"><a href="{{site.url}}/research/index.html" class="main-nav__link">研究内容</a></li>
-      <li class="main-nav__item  main-nav__item--170"><a href="{{site.url}}/platform/index.html" class="main-nav__link">研究平台</a></li>
+      <li class="main-nav__item  main-nav__item--170"><a href="{{site.url}}/envirlab/index.html" class="main-nav__link">研究平台</a></li>
       <li class="main-nav__item  main-nav__item--170"><a href="{{site.url}}/publications/index.html" class="main-nav__link">研究成果</a></li>
       <li class="main-nav__item  main-nav__item--407"><a href="{{site.url}}/presentations/index.html" class="main-nav__link">学术报告</a></li>
       <li class="main-nav__item  main-nav__item--203"><a href="{{site.url}}/current-members/index.html" class="main-nav__link">研究团队</a></li>
