--- a/_layouts/platform.html
+++ b/_layouts/platform.html
@@ -4,6 +4,16 @@
 
 <head>
 {% include head.html %}
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?3b0973e9f08a87c7e5cfccb5c8039cb6";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 </head>
 
 <body class="page-template-default page flex flex-column">
