change fancybox JS link

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
 <meta name="twitter:title" content="{% if page.title %}{{ page.title }} &#8211; {% endif %}{{ site.title }}" />
 <script type='application/ld+json'>{"@context":"http:\/\/schema.org","@type":"WebSite","@id":"#website","url":"{{ site.url }}\/","name":"{{ site.site_name }}","potentialAction":{"@type":"SearchAction","target":"{{ site.url }}\/?s={search_term_string}","query-input":"required name=search_term_string"}}</script>
 <!--Fancybox-->
-<script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="{{ site.url }}/assets/fancybox/jquery-3.2.1.min.js"></script>
 
 <link  href="{{ site.url }}/assets/fancybox/jquery.fancybox.min.css" rel="stylesheet">
 <script src="{{ site.url }}/assets/fancybox/jquery.fancybox.min.js"></script>
