change to guojiaji project

--- a/_layouts/platform.html
+++ b/_layouts/platform.html
@@ -23,7 +23,7 @@ var _hmt = _hmt || [];
     <section class="research-intro" style="background-image: url('{{site.url}}/assets/img/platform.jpg');">
     <div class="wrapper wrapper--research wrapper--intro">
       <header class="research-intro__header transparent js-animate-fadeInOnScroll">
-                  <h1 class="research-intro__heading">物质循环过程虚拟仿真实验</h1>
+                  <h1 class="research-intro__heading">国家虚拟仿真实验教学项目</h1>
           <div class="divider divider--violet"><span></span></div>
                 <p>开课时间：2018-09-17&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;学分：2&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;学时：36&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;负责人：袁增伟</p>
       </header>
